fix: update custom renderer logic/custom track spacing

--- a/src/plugins/htmlVideoPlayer/style.scss
+++ b/src/plugins/htmlVideoPlayer/style.scss
@@ -79,7 +79,8 @@ video[controls]::-webkit-media-controls {
     background-color: rgba(0, 0, 0, 0.8);
     margin: auto;
     display: block;
-    margin-bottom: 0 !important;
+    min-height: 0 !important;
+    margin-bottom: 0.5em !important;
 }
 
 @keyframes htmlvideoplayer-zoomin {
